# crosstex

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: crosstexConfig.cmake
include/crosstex/: BC.hpp  Colors.hpp
src/: BC1.cpp  BC123_shared.cpp  BC123_shared.hpp  BC2.cpp  BC3.cpp  BC4.cpp  BC45_shared.cpp  BC45_shared.hpp  BC5.cpp  BC67_shared.cpp  BC67_shared.hpp  BC6H.cpp  BC7.cpp  OptimizeAlpha.hpp
